<resources>
    <string name="app_name">PUPASYA</string>
    <string name="bienvenidos">Bienvenidos a la aplicación</string>
    <string name="arroz">Pupusas de arroz</string>
    <string name="guardarDatos">Guardar Datos</string>
    <string name="ingresar">Ingrese sus datos:</string>4
    <string name="nombreyapellido">Nombre y apellido:</string>
    <string name="apellido">Apellido:</string>
    <string name="llevar">Para llevar:</string>
    <string name="empezarPedido">Empezar pedido</string>
    <string name="Iniciar">Iniciar</string>
    <string name="titulo">PUPASYA!</string>
    <string name="tituloMaiz">Ordene sus pupusas de maíz</string>
    <string name="tituloArroz">Ordene sus pupusas de arroz</string>
    <string name="info">Información</string>
    <string name="horarios">Horarios:</string>
    <string name="semana">Lunes a Jueves: 6:00 am a 9:00 pm </string>
    <string name="findesemana">Viernes a Domingo: 6:00 am a 10:30 pm </string>
    <string name="telefonos">Teléfonos:</string>
    <string name="wa">WhatsApp: 7551-4171</string>
    <string name="tele">Teléfono fijo: 2262-7891</string>
    <string name="encargar">Puedes hacer tus pedidos de pupusas para una celebración con una semana de anticipación</string>
    <string name="datosCuriosos">Datos sobre las pupusas</string>
    <string name="dato1">1. Elaboración: Las pupusas son hechas de harina de arroz o maíz, y rellenas de las especialidades se soliciten, generalmente son revueltas (queso, frijoles y chicharrón), de queso o frijol con queso, acompañadas con curtido y salsa</string>
    <string name="dato2">2. Su origen: La palabra pupusa proviene del pipil “pupusawa”, que en español se pronuncia “popotlax”, del náhuatl “Popotl” que significa grande, relleno y de “Tlaxkalli” o tortilla.</string>
    <string name="dato3">3. Especialidades: Con el tiempo la oferta se amplió a queso con loroco, queso con jalapeño, ajo, albahaca, mora, chipilín, cochinito, mora, hongos, ayote, pollo, camarón, chicharrón con queso, chicharrón con frijoles, la pupusa loca (es una pupusa del tamaño de una pizza personal con muchos ingredientes), entre otras especialidades.</string>
    <string name="dato4">4. Tiene su día: En el 2005, por decreto legislativo se declaró como un platillo nacional de El Salvador, por lo que cada segundo domingo del mes de noviembre se conmemora con diversas actividades ligadas a la elaboración de pupusas.</string>
    <string name="porcentajes">Información nutricional:</string>
    <string name="PedidosTitulo">Haga su pedido de pupusas</string>
    <string name="especialidad">Especialidad:</string>
    <string name="masa">Masa:</string>
    <string name="cantidad">Cantidad:</string>
    <string name="detalle">Detalle del pedido</string>
    <string name="iniciarPedido">INICIAR PEDIDO</string>
    <string name="bebida">Bebida:</string>
    <string name="detalle_bebida">Detalle de bebidas</string>
    <string name="btnplay">Play</string>
    <string name="btnstop">Stop</string>
    <string name="escucha">Escucha una de nuestras canciones favoritas mientras realizas tu orden</string>
    <string name="DetallePedidoTitulo">Detalle del pedido</string>
    <string name="detallePupusa">Detalle de pupusas</string>
    <string name="detalleBebida">Detalle de bebidas</string>
    <string name="totalPupusas">Total pupusas: $</string>
    <string name="totalBebidas">Total bebidas: $ </string>
    <string name="BebidaTitulo">Seleccione las bebidas que desee</string>
    <string name="totalPedido">TOTAL A CANCELAR: $</string>
    <string name="nOrden"># Orden:</string>
    <string name="irLectorQR">Lector QR para ir a nuestras redes sociales</string>
    <string name="Despachado">Consulte su pedido</string>
    <string name="Consultar_Pedido">Consultar Pedido</string>
    <string name="Estado">Despachado:</string>
    <string name="historia">Historia de las pupusas</string>
    <string name="menuPrincipal">MENU PRINCIPAL</string>
    <string name="menuCamaraCompartir">Comparte una foto con nosotros</string>
    <string name="tomarfoto">Tomar fotografia</string>
</resources>
