<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DatosCuriosos">
    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="match_parent">
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:layout_marginTop="15dp">

        <TextView
            android:id="@+id/text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/datosCuriosos"
            android:textColor="@color/colorAccent"
            android:textStyle="bold"
            android:textSize="25dp" />
    </TableRow>
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:weightSum="2">
        <TextView
            android:id="@+id/textView13"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:textStyle="bold"
            android:textColor="@color/colorPrimaryDark"
            android:text="@string/porcentajes" />
    </TableRow>
    <LinearLayout
        android:id="@+id/pieGraph"
        android:layout_width="150dp"
        android:layout_height="250dp"
        android:background="@color/colorPrimaryDark"
        android:orientation="horizontal">

    </LinearLayout>
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="15dp"
        android:weightSum="2">
        <TextView
            android:id="@+id/textView8"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="center"
            android:textColor="@color/colorPrimaryDark"
            android:text="@string/dato1" />
    </TableRow>
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:weightSum="2">
        <TextView
            android:id="@+id/textView9"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="center"
            android:textColor="@color/colorPrimaryDark"
            android:text="@string/dato2" />
    </TableRow>
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:weightSum="2">
        <TextView
            android:id="@+id/textView10"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="center"
            android:textColor="@color/colorPrimaryDark"
            android:text="@string/dato3" />
    </TableRow>
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:weightSum="2">
        <TextView
            android:id="@+id/textView11"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="center"
            android:textColor="@color/colorPrimaryDark"
            android:text="@string/dato4" />
    </TableRow>
    </TableLayout>
</ScrollView>