<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ResultActivity">
    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="match_parent">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:layout_marginTop="15dp">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorAccent"
            android:textStyle="bold"
            android:textSize="25dp"
            android:text="@string/info" />
    </TableRow>


    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center">
    <ImageView
        android:id="@+id/imagenReloj"
        android:layout_height="125dp"
        android:layout_width="75dp"
        android:layout_weight="1"
        tools:ignore="MissingConstraints"
        />
    </TableRow>
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <TextView
            android:id="@+id/textView7"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/horarios"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="20dp"
            android:textStyle="bold" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:weightSum="2">
    <TextView
        android:id="@+id/textView8"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="20dp"
        android:textStyle="italic"
        android:text="@string/semana" />
    </TableRow>
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:weightSum="2">
    <TextView
        android:id="@+id/textView9"
        android:layout_width="0dp"
        android:layout_weight="2"
        android:layout_height="wrap_content"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="20dp"
        android:textStyle="italic"
        android:text="@string/findesemana" />
  </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">
        <ImageView
            android:id="@+id/imagentelefono"
            android:layout_height="125dp"
            android:layout_width="75dp"
            android:layout_weight="1"
            tools:ignore="MissingConstraints"
            />
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp">

            <TextView
                android:id="@+id/textView10"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/telefonos"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="20dp"
                android:textStyle="bold" />

        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:weightSum="2">
            <TextView
                android:id="@+id/textView11"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="20dp"
                android:textStyle="italic"
                android:text="@string/wa" />
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:weightSum="2">
            <TextView
                android:id="@+id/textView12"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="20dp"
                android:textStyle="italic"
                android:text="@string/tele" />
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp">
            <ImageView
                android:id="@+id/imagencelebra"
                android:layout_height="125dp"
                android:layout_width="75dp"
                android:layout_weight="1"
                tools:ignore="MissingConstraints"
                />
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:weightSum="4"
            android:gravity="center">

            <TextView
                android:id="@+id/textView13"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:text="@string/encargar"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="20dp"
                android:textStyle="bold"
                android:gravity="center"/>
        </TableRow>

</TableLayout>
</ScrollView>