<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TicketPupa">


    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="match_parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_marginTop="10dp">

            <TextView
                android:id="@+id/text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/DetallePedidoTitulo"
                android:textColor="@color/colorAccent"
                android:gravity="center"
                android:textStyle="bold"
                android:textSize="25dp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_marginTop="10dp">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="0dp"
            android:layout_weight="1.5"
            android:layout_height="wrap_content"
            android:text="@string/detallePupusa"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="20dp"
            android:textStyle="bold"
            android:gravity="center"
            />
        </TableRow>



        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_marginTop="5dp"
            >


            <ListView
                android:id="@+id/listaTicketPupusas"
                android:layout_width="match_parent"
                android:layout_height="300dp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_marginTop="10dp">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="0dp"
                android:layout_weight="1.5"
                android:layout_height="wrap_content"
                android:text="@string/detalleBebida"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="20dp"
                android:textStyle="bold"
                android:gravity="center"
                />
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_marginTop="5dp"
            >


            <ListView
                android:id="@+id/listaTicketBebidas"
                android:layout_width="match_parent"
                android:layout_height="300dp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_marginTop="5dp"
            android:weightSum="4">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:text="@string/totalPupusas"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="15dp"
                android:textStyle="bold"
                android:gravity="center"
                />

            <TextView
                android:id="@+id/totalPupusa"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:text=""
                android:textColor="@color/colorPrimaryDark"
                android:textSize="20dp"
                android:textStyle="bold"
                android:gravity="center"
                />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_marginTop="5dp"
            android:weightSum="4">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:text="@string/totalBebidas"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="15dp"
                android:textStyle="bold"
                android:gravity="center"
                />

            <TextView
                android:id="@+id/totalBebida"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:text=""
                android:textColor="@color/colorPrimaryDark"
                android:textSize="20dp"
                android:textStyle="bold"
                android:gravity="center"
                />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_marginTop="5dp"
            android:weightSum="4">

            <TextView
                android:id="@+id/textView16"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:text="@string/totalPedido"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="15dp"
                android:textStyle="bold"
                android:gravity="center"
                />

            <TextView
                android:id="@+id/totalPedido"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:text=""
                android:textColor="@color/colorPrimaryDark"
                android:textSize="20dp"
                android:textStyle="bold"
                android:gravity="center"
                />
        </TableRow>

    </TableLayout>
</ScrollView>