<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ConsultarDespachado">
    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="match_parent">


        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_marginTop="15dp">

            <TextView
                android:id="@+id/text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Despachado"
                android:textColor="@color/colorAccent"
                android:textStyle="bold"
                android:textSize="25dp" />
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:weightSum="4">

            <ImageView
                android:id="@+id/imagenConsulta"
                android:layout_height="125dp"
                android:layout_width="75dp"
                android:layout_weight="4"
                tools:ignore="MissingConstraints"

                />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:weightSum="4">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="0dp"
                android:layout_weight="4"
                android:layout_height="wrap_content"
                android:text="@string/nOrden"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="20dp"
                android:textStyle="italic"
                android:gravity="center"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:weightSum="4"
            android:gravity="center"
            android:layout_marginTop="15dp">

            <EditText
                android:id="@+id/idOrden"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="2"
                android:ems="10"
                android:gravity="center"
                android:inputType="text" />
        </TableRow>



        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_marginTop="15dp">

            <Button
                android:id="@+id/botonGuardar"
                android:onClick="consultar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimaryDark"
                android:text="@string/Consultar_Pedido" />
        </TableRow>


        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:weightSum="4">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:text="@string/nombreyapellido"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="20dp"
                android:textStyle="italic"
                android:gravity="center"/>

            <TextView
                android:id="@+id/mostrarNombre"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:text=""
                android:textColor="@color/colorPrimaryDark"
                android:textSize="20dp"
                android:textStyle="italic"
                android:gravity="center"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:weightSum="4">

            <TextView
                android:id="@+id/textView8"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:text="@string/Estado"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="20dp"
                android:textStyle="italic"
                android:gravity="center"/>

            <TextView
                android:id="@+id/mostrarEstado"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:text=""
                android:textColor="@color/colorPrimaryDark"
                android:textSize="20dp"
                android:textStyle="italic"
                android:gravity="center"/>
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:weightSum="4">

            <TextView
                android:id="@+id/textView7"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:text="@string/totalPedido"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="20dp"
                android:textStyle="italic"
                android:gravity="center"/>

            <TextView
                android:id="@+id/mostrarTotal"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:text=""
                android:textColor="@color/colorPrimaryDark"
                android:textSize="20dp"
                android:textStyle="italic"
                android:gravity="center"/>
        </TableRow>







    </TableLayout>
</ScrollView>