<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondoblanco"
    tools:context=".CrearPedidos">
    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="match_parent">
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:layout_marginTop="10dp">

    <TextView
        android:id="@+id/text"
        android:layout_width="wrap_content"
        android:gravity="center"
        android:layout_height="wrap_content"
        android:text="@string/PedidosTitulo"
        android:textColor="@color/rojo"
        android:textStyle="bold"
        android:textSize="25dp" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center">
        <ImageView
            android:id="@+id/imagenAnotar"
            android:layout_height="130dp"
            android:layout_width="75dp"
            android:layout_weight="1"
            tools:ignore="MissingConstraints"
            />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="4"
        android:layout_marginTop="15dp">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="0dp"
            android:layout_weight="1.5"
            android:layout_height="wrap_content"
            android:text="@string/especialidad"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="20dp"
            android:textStyle="bold"
            />
        <Spinner
            android:id="@+id/pupa"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2.5"
            />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="4"
        android:layout_marginTop="15dp">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="0dp"
            android:layout_weight="1.5"
            android:layout_height="wrap_content"
            android:text="@string/masa"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="20dp"
            android:textStyle="bold"
            />

        <Spinner
            android:id="@+id/masa"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2.5"/>
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="4"
        android:layout_marginTop="15dp">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="0dp"
            android:layout_weight="1.5"
            android:layout_height="wrap_content"
            android:text="@string/cantidad"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="20dp"
            android:textStyle="bold"
            />

        <EditText
            android:id="@+id/editCantidad"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="number"
            android:text="" />
    </TableRow>


        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:weightSum="4">


            <ImageButton
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="agregarPedido"
                android:background="@drawable/botonredondo2"
                app:srcCompat="@android:drawable/ic_input_add" />
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_marginTop="15dp"
            >
            <TextView
                android:id="@+id/textView6"
                android:layout_width="0dp"

                android:layout_height="wrap_content"
                android:text="@string/detalle"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="20dp"
                android:textStyle="bold"
                android:gravity="center"
                />
        </TableRow>
        <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:layout_marginTop="5dp"
       >


        <ListView
            android:id="@+id/listaPedido"
            android:layout_width="wrap_content"
            android:layout_height="300dp" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:weightSum="4"
        android:layout_marginTop="5dp">


        <ImageButton
            android:onClick="guardarPedido"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/botonredondo2"
            app:srcCompat="@drawable/guardado" />
    </TableRow>




    </TableLayout>

</ScrollView>